Fix servlet content not wrapping.

--- a/webapp/src/main/resources/static/style.css
+++ b/webapp/src/main/resources/static/style.css
@@ -105,7 +105,6 @@ body {
     border-width: 2px;
     border-style: dashed;
     text-align: center;
-    width: max-content;
     margin-left: auto;
     margin-right: auto;
     padding: 1em;
@@ -130,7 +129,6 @@ body {
     border-width: 2px;
     border-style: dotted;
     text-align: center;
-    width: max-content;
     margin-left: auto;
     margin-right: auto;
 
